--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,11 @@ shallow_clone: true
 max_jobs: 1
 image:
   - Visual Studio 2017
-  - Ubuntu2004
+#  - Ubuntu2004
 
 configuration:
   - release-fastbuild
-  - release
+#  - release
 #  - debug
 
 platform:
@@ -268,25 +268,6 @@ for:
         echo "Skipping certificate decryption because we are in a pull request or not on the mixxxdj account."
       )
 
-  test_script:
-    # Calling mixxx-test under bash to have standard output and use stdbuf to
-    # unbuffer standard & error output
-    - set CTEST_OUTPUT_ON_FAILURE=1
-    - ctest -C "Release" -T test --no-compress-output --timeout 45
-    - cmake --build . --target benchmark
-
-  after_test:
-    # Found at https://help.appveyor.com/discussions/suggestions/5298-support-ctest-xml-test-results
-    - ps: |
-        $ctest_xml = Get-ChildItem -Path Testing\*\Test.xml
-        $ctest_to_junit_xsl = Get-ChildItem -Path ..\cmake\ctest-to-junit.xsl
-        $XSLInputElement = New-Object System.Xml.Xsl.XslCompiledTransform
-        $XSLInputElement.Load($ctest_to_junit_xsl)
-        $XSLInputElement.Transform((Resolve-Path $ctest_xml), (Join-Path (Resolve-Path .) "ctest-to-junit-results.xml"))
-        $wc = New-Object 'System.Net.WebClient'
-        $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\ctest-to-junit-results.xml))
-
-
   artifacts:
     - path: 'cmake_build/*.exe'
     - path: 'cmake_build/*.msi'
@@ -309,9 +290,14 @@ on_failure:
 on_finish:
   - echo "*** DONE ***"
 
-deploy:
-  - provider: Environment
-    name: downloads.mixxx.org
+before_deploy:
+  - cmd: echo before_deploy %cd%
+
+deploy_script:
+  - cmd: build\appveyor\deploy.bat
+
+after_deploy:
+  - cmd: echo after_deploy %cd%
 
 notifications:
   - provider: Webhook
